# lilly

./: .gitignore  README.md  west.yml
3D/: hole_test.3mf  hole_test.stp  ornament.AD_PRT  ornament.stp
RP2350-Touch-LCD-1.28/arduino/RP2350-Touch-LCD-1.28/: RP2350-Touch-LCD-1.28.ino
RP2350-Touch-LCD-1.28/c/: CMakeLists.txt  ReadmeCN.txt  ReadmeEN.txt
RP2350-Touch-LCD-1.28/c/examples/: CMakeLists.txt  LCD_1in28_test.c
RP2350-Touch-LCD-1.28/python/: ReadmeCN.txt  ReadmeEN.txt
app/lilly/: CMakeLists.txt  build.ps1  convert_images.py  flash.py  pristine.ps1  prj.conf
app/lilly/boards/: rpi_pico2_rp2350a_m33.overlay
app/lilly/src/: main.c
